--- a/notifications.html
+++ b/notifications.html
@@ -1,4 +1,3 @@
-//
 <!DOCTYPE html>
 <html lang="ar" dir="rtl">
   <head>
@@ -112,6 +111,26 @@
         display: flex;
         align-items: center;
         gap: 10px;
+        position: relative;
+      }
+
+      /* 🔔 Bell notification container and badge */
+      .notification-bell {
+        position: relative;
+        display: inline-block;
+      }
+
+      .bell-badge {
+        position: absolute;
+        top: -5px;
+        left: -4px; /* 👈 Very close to the left side of the bell */
+        background-color: red;
+        color: white;
+        border-radius: 50%;
+        font-size: 10px;
+        padding: 3px 5px;
+        font-weight: bold;
+        box-shadow: 0 0 3px rgba(0, 0, 0, 0.3);
       }
 
       .notifications-header p {
@@ -268,7 +287,10 @@
         <div class="notifications-container">
           <div class="notifications-header">
             <h2>
-              <i class="fa-solid fa-bell"></i>
+              <div class="notification-bell">
+                <i class="fa-solid fa-bell"></i>
+                <span class="bell-badge">3</span>
+              </div>
               إشعارات الحجوزات
             </h2>
             <p>جميع الحجوزات الجديدة والمواعيد القادمة</p>
