--- a/notifications.html
+++ b/notifications.html
@@ -1,3 +1,4 @@
+//
 <!DOCTYPE html>
 <html lang="ar" dir="rtl">
   <head>
@@ -111,26 +112,6 @@
         display: flex;
         align-items: center;
         gap: 10px;
-        position: relative;
-      }
-
-      /* 🔔 Bell notification container and badge */
-      .notification-bell {
-        position: relative;
-        display: inline-block;
-      }
-
-      .bell-badge {
-        position: absolute;
-        top: -5px;
-        left: -4px; /* 👈 Very close to the left side of the bell */
-        background-color: red;
-        color: white;
-        border-radius: 50%;
-        font-size: 10px;
-        padding: 3px 5px;
-        font-weight: bold;
-        box-shadow: 0 0 3px rgba(0, 0, 0, 0.3);
       }
 
       .notifications-header p {
@@ -211,6 +192,24 @@
         outline: none;
         border-color: #d946ef;
       }
+
+      .notification-wrapper {
+        position: relative;
+        display: inline-block;
+      }
+
+      .notification-popup {
+        position: absolute;
+        top: -10px; /* start slightly above the button */
+        right: -15px; /* move a bit to the right */
+        transform: translateY(-100%);
+        background: white;
+        border-radius: 12px;
+        box-shadow: 0 4px 12px rgba(0, 0, 0, 0.15);
+        padding: 15px 20px;
+        min-width: 250px;
+        z-index: 9999;
+      }
     </style>
   </head>
 
@@ -264,10 +263,15 @@
         <!-- HEADER -->
         <header class="header">
           <div class="header-left">
-            <button class="menu-toggle icon-btn" id="menuToggle">
-              <i class="fa-solid fa-bars"></i>
-            </button>
-            <h1>التنبيهات</h1>
+            <div class="notification-wrapper">
+              <button class="icon-btn">
+                <i class="fa-solid fa-bell"></i>
+              </button>
+
+              <div class="notification-popup">
+                <p>إشعارات جديدة</p>
+              </div>
+            </div>
           </div>
           <div class="header-right">
             <div class="search-box">
@@ -287,10 +291,7 @@
         <div class="notifications-container">
           <div class="notifications-header">
             <h2>
-              <div class="notification-bell">
-                <i class="fa-solid fa-bell"></i>
-                <span class="bell-badge">3</span>
-              </div>
+              <i class="fa-solid fa-bell"></i>
               إشعارات الحجوزات
             </h2>
             <p>جميع الحجوزات الجديدة والمواعيد القادمة</p>
